# gcfflasher

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE.txt  README-RPM.md  README.md  buffer_helper.c  buffer_helper.h  build_cmake.sh  build_crosscompile_linux.sh  build_linux.sh  build_posix.sh  build_windows.bat  gcf.c  gcf.h  gcfflasher.spec  linux_get_usb_devices.c  linux_libgpiod_reset.c  linux_libgpiod_v1_reset.c  linux_libgpiod_v2_reset.c  macos_get_usb_devices.c  main_dos.c  main_posix.c  main_windows.c  net.c  net.h  net_sock.c  net_sock.h  net_udp_posix.c  net_udp_win32.c  posix_libftdi_reset.c  protocol.c  protocol.h  sign-and-upload-macos.sh  sign-macos.sh  u_bstream.c  u_bstream.h  u_mem.c  u_mem.h  u_sstream.c  (+5 more)
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  build.yaml
ftd2xx/: ftd2xx.h
toolchains/: mingw-w64-i686.cmake  mingw-w64-x86_64.cmake
